--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
     "build": "next build",
     "start": "next start",
     "type-check": "tsc",
+    "prettier": "prettier --ignore-path .gitignore \"**/*.(js|jsx|json|yml|yaml|css|ts|tsx|md|mdx)\"",
+    "format": "npm run prettier -- --write",
     "storybook": "start-storybook -p 6006 --no-dll",
     "build-storybook": "build-storybook --no-dll"
   },
   "dependencies": {
     "next": "latest",
+    "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
