--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "build": "next build",
     "start": "next start",
     "type-check": "tsc",
+    "lint": "next lint --max-warnings 0",
+    "lint:fix": "next lint --fix",
     "prettier": "prettier --ignore-path .gitignore \"**/*.(js|jsx|json|yml|yaml|css|ts|tsx|md|mdx)\"",
     "format": "npm run prettier -- --write",
     "storybook": "start-storybook -p 6006 --no-dll",
@@ -12,7 +14,6 @@
   },
   "dependencies": {
     "next": "latest",
-    "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -26,8 +27,13 @@
     "@types/node": "^14.14.2",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@typescript-eslint/eslint-plugin": "^5.14.0",
     "babel-loader": "^8.1.0",
+    "eslint": "^8.11.0",
+    "eslint-config-next": "^12.1.0",
+    "eslint-plugin-storybook": "^0.5.7",
     "postcss": "^8.4.8",
+    "prettier": "^2.5.1",
     "react-is": "^17.0.1",
     "sass": "^1.32.4",
     "tailwindcss": "^3.0.23",
