--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint:fix": "next lint --fix",
     "prettier": "prettier --ignore-path .gitignore \"**/*.(js|jsx|json|yml|yaml|css|ts|tsx|md|mdx)\"",
     "format": "npm run prettier -- --write",
+    "test": "jest",
     "storybook": "start-storybook -p 6006 --no-dll",
     "build-storybook": "build-storybook --no-dll"
   },
@@ -24,6 +25,8 @@
     "@storybook/addon-links": "^6.1.11",
     "@storybook/react": "^6.1.11",
     "@styled-jsx/plugin-sass": "^3.0.0",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.4",
     "@types/node": "^14.14.2",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
@@ -32,6 +35,7 @@
     "eslint": "^8.11.0",
     "eslint-config-next": "^12.1.0",
     "eslint-plugin-storybook": "^0.5.7",
+    "jest": "^27.5.1",
     "postcss": "^8.4.8",
     "prettier": "^2.5.1",
     "react-is": "^17.0.1",
