--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint:fix": "next lint --fix",
     "prettier": "prettier --ignore-path .gitignore \"**/*.(js|jsx|json|yml|yaml|css|ts|tsx|md|mdx)\"",
     "format": "npm run prettier -- --write",
+    "check-format": "npm run prettier -- --list-different",
     "test": "jest",
+    "validate": "npm-run-all check-format lint build test build-storybook",
     "storybook": "start-storybook -p 6006 --no-dll",
     "build-storybook": "build-storybook --no-dll"
   },
@@ -36,6 +38,7 @@
     "eslint-config-next": "^12.1.0",
     "eslint-plugin-storybook": "^0.5.7",
     "jest": "^27.5.1",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.8",
     "prettier": "^2.5.1",
     "react-is": "^17.0.1",
