--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "scripts": {
+    "prepare": "husky install",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -37,7 +38,9 @@
     "eslint": "^8.11.0",
     "eslint-config-next": "^12.1.0",
     "eslint-plugin-storybook": "^0.5.7",
+    "husky": "^7.0.4",
     "jest": "^27.5.1",
+    "lint-staged": "^12.3.5",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.8",
     "prettier": "^2.5.1",
