--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.8",
     "prettier": "^2.5.1",
+    "prettier-plugin-organize-imports": "^2.3.4",
     "react-is": "^17.0.1",
     "sass": "^1.32.4",
     "tailwindcss": "^3.0.23",
