--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build-storybook": "build-storybook --no-dll"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^1.33.3",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
